Fixed extra white space being added due to positioning errors and fixed extra width.

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -5,7 +5,6 @@ html {
 }
 body {
     min-height: 100%;
-    height: 100%;
     margin: 0;
 }
 .top {
@@ -39,15 +38,18 @@ body {
   height: 100%;
 }
 .main {
-  position: relative;
+  position: absolute;
   float: right;
   left: 20px; top:92px; right:0; bottom:0;
   height: 100%;
   width: 100%;
+  width: -webkit-calc(100% - 20px);
+  width: -moz-calc(100% - 20px);
+  width: calc(100% - 20px);
   overflow: visible;
 }
 #main-content {
-  position: relative;
+  position: absolute;
   left: 157-20px;
   height: 100%;
 }
